<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:background="#EFE8E1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView83"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="0dp"
                android:text="@string/Create_your_email_account"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView84"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/E_mail"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="24dp"
                android:background="@color/white"
                android:ems="0"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView85"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/Password"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView86"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/Choose_a_password"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="24dp"
                android:background="@color/white"
                android:ems="0"
                android:inputType="textPassword"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView87"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/Repeat_password"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:id="@+id/repeatpassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="24dp"
                android:background="@color/white"
                android:ems="0"
                android:inputType="textPassword"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView88"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/Product_serial_number"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/serialnumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="24dp"
                android:background="@color/white"
                android:ems="0"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView89"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/Personal_details"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView90"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/First_Name"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="24dp"
                android:background="@color/white"
                android:ems="0"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView91"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/Last_Name"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="24dp"
                android:background="@color/white"
                android:ems="0"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView92"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/Company"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="24dp"
                android:background="@color/white"
                android:ems="0"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView103"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/store_type"
                android:textColor="@android:color/background_dark" />

            <Spinner
                android:id="@+id/spinner6"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="24dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView93"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/Contact_Phone_Number"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="24dp"
                android:background="@color/white"
                android:ems="0"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView94"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/Physical_address_Mailing_address"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView95"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/Country"
                android:textColor="@android:color/background_dark" />

            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="24dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView96"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/Street"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:id="@+id/streat"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="24dp"
                android:background="@color/white"
                android:ems="0"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView97"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/City"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="24dp"
                android:background="@color/white"
                android:ems="0"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView98"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/State"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="24dp"
                android:background="@color/white"
                android:ems="0"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView99"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/ZP_Code"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:id="@+id/zpcode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="24dp"
                android:background="@color/white"
                android:ems="0"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="34dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@mipmap/button"
                    android:onClick="onclick"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@mipmap/button"
                    android:onClick="onclick"
                    android:text="@string/Sign_in"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:visibility="gone" android:id="@+id/load" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_centerInParent="true">

        <ImageView
                android:src="@drawable/corner"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/imageView11" android:alpha="0.8"/>
        <TextView
                android:text="Data Loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView11"
                android:layout_centerHorizontal="true" android:layout_marginTop="20dp"
                android:textColor="@color/white"/>
    </RelativeLayout>
    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="simple-loader2.json"
            app:lottie_loop="true"
            android:layout_centerInParent="true" android:translationY="15dp" android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"/>
</RelativeLayout>