<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="307dp"
        android:layout_height="146dp"
        android:layout_centerInParent="true"
        android:background="@drawable/cornerwhite">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@id/textView16"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/Please_check_your_internet_connection"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/Connection_error"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/back"
            app:srcCompat="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/re" />

        <LinearLayout
            android:id="@+id/re"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onclick"
                android:text="@string/Set_up"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>